<resources>
    <string name="app_name">UIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Đăng Nhập</string>
    <string name="password">Mật Khẩu</string>
    <string name="username">Tài Khoản</string>
    <string name="login_false">Sai tài khoản hoặc mật khẩu!</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="logoDescription">Logo</string>

    <string name="hello">Chào </string>
    <string name="menu_info">Thông Tin</string>
    <string name="menu_exam_schedule">Lịch thi</string>
    <string name="menu_mark">Điểm</string>
    <string name="menu_schedule">TKB</string>
    <string name="menu_option">Cài Đặt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="policy">Bằng cách Đăng Nhập, bạn đồng ý với chính sách bảo mật của chúng tôi.</string>

    // info
    <string name="DTL">Điểm tích lũy</string>
    <string name="thoi_khoa_bieu">Hôm Nay</string>
    <string name="thong_tin_chung">Thông Tin Chung</string>
    <string name="diem_thi">Điểm Thi</string>
    <string name="mon">Môn</string>
    <string name="thi">Thi</string>
    <string name="tong">Tổng</string>
    <string name="ket_qua">Kết Quả</string>

    <string name="todo">TODO</string>
    <string name="end_name">,</string>
    <string name="lịch_thi">Lịch Thi</string>
    <string name="thoi_khoa_bieu2">Ngày Mai</string>
    <string name="chao">chào buổi sáng</string>
    <string name="cpa">Điểm tích lũy</string>
    <string name="tctl">Tín chỉ tích lũy</string>
    <string name="a_a">Số A/A+</string>
    <string name="ma_mon">Mã Môn</string>
    <string name="ten_mon">Tên Môn</string>
    <string name="ghep_thi">Ghép Thi</string>
    <string name="t_thi">Tổ Thi</string>
    <string name="s_l_ng">Số Lượng</string>
    <string name="ng_y_thi">Ngày Thi</string>
    <string name="b_t_u">Bắt Đầu</string>
    <string name="s_ti_t">Số Tiết</string>
    <string name="ph_ng">Phòng</string>
    <string name="ghi_ch">Ghi Chú</string>
    <string name="dang_xuat">Đăng xuất</string>
</resources>