<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/menu_schedule"/>

    <item
        android:id="@+id/navigation_exam_schedule"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_mark" />

    <item
        android:id="@+id/navigation_infor"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/menu_info" />

    <item
        android:id="@+id/navigation_mark"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/menu_exam_schedule" />

    <item
        android:id="@id/navigation_exam_schedule"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_option"/>

</menu>