<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_infor">

    <fragment
        android:id="@+id/navigation_infor"
        android:name="com.baokiin.uisptit.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/navigation_mark"
        android:name="com.baokiin.uisptit.ui.mark.MarkFragment"
        android:label="@string/menu_exam_schedule"
        tools:layout="@layout/fragment_mark" />
    <fragment
        android:id="@+id/navigation_exam_schedule"
        android:name="com.baokiin.uisptit.ui.examschedule.ExamScheduleFragment"
        android:label="@string/menu_mark"
        tools:layout="@layout/fragment_exam_schedule" />
    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.baokiin.uisptit.ui.schedule.ScheduleFragment"
        android:label="fragment_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/navigation_option"
        android:name="com.baokiin.uisptit.ui.option.OptionFragment"
        android:label="fragment_option"
        tools:layout="@layout/fragment_option" />
</navigation>