<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.baokiin.uisptit.ui.examschedule.ExamScheduleViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mark.MarkFragment"
        android:background="@color/infoBackground"
        >

        <TableLayout
            android:id="@+id/tenMon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:collapseColumns="*"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/maMon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ma_mon"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Mon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/ten_mon"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tinChi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ghep_thi"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PercentCC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/t_thi"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PercentKT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/s_l_ng"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PercentTH"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ng_y_thi"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PercentSe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/b_t_u"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PercentThi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/s_ti_t"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ph_ng"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/KT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ghi_ch"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btnLich"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenMon" />

<!--        <Button-->
<!--            android:id="@+id/btnLich"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:text="Lịch"-->
<!--            android:textColor="#000"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            tools:ignore="HardcodedText" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>