<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    >
    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backround"
        tools:context=".ui.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:focusable="auto"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:boxCornerRadiusTopStart="45dp"
            app:boxCornerRadiusTopEnd="45dp"
            app:boxCornerRadiusBottomEnd="45dp"
            app:boxCornerRadiusBottomStart="45dp"
            android:textColorHint="@color/my_color"
            app:boxStrokeColor="@color/colorPink"
            app:layout_constraintBottom_toTopOf="@+id/password_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleTint="@color/my_color">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backround_button"
                android:hint="@string/username"
                android:singleLine="true"
                android:textColor="#fff"
                android:drawableStart="@drawable/icon_account"
                android:drawablePadding="10dp"
                android:textColorHint="#F6E6E6"
                android:textCursorDrawable="@drawable/custom_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/password"
            android:singleLine="true"
            android:textColorHint="@color/my_color"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPink"
            app:boxCornerRadiusTopStart="45dp"
            app:boxCornerRadiusTopEnd="45dp"
            app:boxCornerRadiusBottomEnd="45dp"
            app:boxCornerRadiusBottomStart="45dp"
            app:layout_constraintBottom_toTopOf="@+id/error_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/my_color">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backround_button"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#EA2121"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/key_icon"
                android:textCursorDrawable="@drawable/custom_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/backround_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FF0E90"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:iconTint="#000000"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/colorPink"
            app:strokeColor="#FF0E90" />

        <TextView
            android:id="@+id/error_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="150dp"
            android:src="@drawable/a"
            app:layout_constraintBottom_toTopOf="@+id/username_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Bằng cách tiếp tục,bạn đồng ý với điều khoản dịch vụ của chúng tôi"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>